<resources>
    <string name="app_name">UConnect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Tagline">UConnect, get\'s you where you\'re going!!</string>
    <string name="AppName">UConnect</string>
    <string name="login">Login</string>
    <string name="we_will_send_you_an_one_time_otp_on_the_given_mobile_number">We will send you an one time OTP on the given mobile number</string>
    <string name="enter_mobile_number">Enter mobile number to login</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="didnt_recieve_the_otp">Didnt Recieve the OTP?</string>
    <string name="resend_otp_again">RESEND OTP AGAIN</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_location">Location_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_manual">Manual_Activity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="proceed">
        <u>Proceed</u></string>
</resources>