<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21FFC107"
    tools:context=".OtpVerification">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        android:src="@drawable/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/otp_verification"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="304dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/please_enter_the_otp_sent_to_you"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textmobileshownumber"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/inputotp1"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textmobileshownumber"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputotp2"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/inputotp1"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputotp3"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/inputotp2"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputotp4"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/inputotp3"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputotp5"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/inputotp4"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/inputotp6"
        android:layout_width="40dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/inputotp5"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/didnt_recieve_the_otp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/textmobileshownumber" />

    <TextView
        android:id="@+id/resendotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="50dp"
        android:text="@string/resend_otp_again"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/textmobileshownumber"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="311dp"
        android:layout_height="135dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textmobileshownumber"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber">

        <Button
            android:id="@+id/buttonsubmitotp"
            android:layout_width="285dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar_verify_otp"
            android:layout_width="21dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>