<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21FFC107"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="86dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="371dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="@string/Tagline"
        android:textAlignment="center"
        android:textColor="#034efd"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="182dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:fontFamily="cursive"
        android:text="@string/AppName"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="154dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmobileshownumber" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="254dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/enter_mobile_number"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backgroundbox"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="+91"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:background="@null"
            android:hint="9810986543"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:maxLength="10"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="372dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.203">

        <ProgressBar
            android:id="@+id/progressbar_sending_otp"
            android:layout_width="21dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/MainLogin"
            android:layout_width="285dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="108dp"
            android:backgroundTint="@color/yellow"
            android:onClick="sendMessage"
            android:text="Login"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:layout_width="124dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:text="New user?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Signup"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/textmobileshownumber"
        android:layout_width="282dp"
        android:layout_height="23dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/Signup"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginEnd="56dp"
        android:text="Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.328" />

</androidx.constraintlayout.widget.ConstraintLayout>
